--- a/bootcamp_app/package.json
+++ b/bootcamp_app/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "co-pg": "^2.0.2",
+    "pg": "^8.5.1"
+  }
 }
